--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col row-cols-1 row-cols">
           <div class="card h-100 border-0">
             <div class="mis-destacados destacado2"></div>
             <div class="card-body">
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col row-cols-1 row-cols">
           <div class="card h-100 border-0">
             <div class="mis-destacados destacado3"></div>
             <div class="card-body">
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col row-cols-1 row-cols">
           <div class="card h-100 border-0">
             <div class="mis-destacados destacado4"></div>
             <div class="card-body">
